# bluecity-viz

./: .gitattributes  .gitignore  .lfsconfig  Makefile  README.md  bluecity-viz.code-workspace  traffic_analysis_feature.md
.github/: .copilot-instructions.md
.github/workflows/: deploy-pages.yml  deploy.yml  quality-check.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  RESEARCH_SAMPLING.md  cvrp.ipynb  cvrp_refactored.ipynb  cvrp_refactored.py  pyproject.toml  test_api.py  test_co2.py  test_cvrp.py  test_node_sampling.py  test_with_data.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: cvrp.py  routes.py
backend/app/models/: cvrp.py  route.py
backend/app/services/: bpr.py  co2_calculator.py  cvrp_service.py  graph_helpers.py  graph_service.py  impact_calculator.py  node_sampling_service.py  routing_engine.py
backend/app/services/sampling/: __init__.py  betweenness.py  config.py  igraph_utils.py  od_sampler.py
backend/app/services/utils/: timing.py
backend/data/: lausanne.geojson  lausanne.graphml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ApiKeyDialog.vue  BuildingDistributionChart.vue  CVRPPanel.vue  CVRPStatistics.vue  CVRPTooltip.vue  DeckGLOverlay.vue  EdgeTooltip.vue  ImpactStatistics.vue  JsonWebMap.vue  LayerGroups.vue  LayerSelector.vue  LegendMap.vue  MapControlsPanel.vue  MapLibreMap.vue  ResourcesPanel.vue
frontend/src/components/panels/: AddSourceDialog.vue  CollectionsPanel.vue  ResourcesPanel.vue  TrafficAnalysisPanel.vue  TrafficAnalysisPanelDeckGL.vue  VisualizationsPanel.vue
frontend/src/composables/: useDeckGLCVRP.ts  useDeckGLTrafficAnalysis.ts  useMapEvents.ts  useMapLogic.ts  useTrafficAnalysisMap.ts
frontend/src/config/: biodiversity.ts  correlation.ts  layerTypes.ts  mapConfig.ts  sp0_migration.ts  sp2_mobility.ts  sp3_nature.ts  sp4_waste.ts  sp6_materials.ts  sp7.ts
frontend/src/services/: cvrp.ts  trafficAnalysis.ts
frontend/src/stores/: buildings.ts  cvrp.ts  layers.ts  theme.ts  trafficAnalysis.ts
frontend/src/stores/layers/: index.ts  investigationManagement.ts  layerManagement.ts  persistence.ts  sourceManagement.ts  types.ts  urlSharing.ts
frontend/src/views/: HomeView.vue
processing/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
processing/Correlation/: Makefile  combine_geojson.py
processing/SP0- migration/: lausanne_migration_2011_2023.pmtiles  process.ipynb
processing/SP02_Mobility/: Makefile
processing/SP03_Nature/: Makefile  process.py
processing/SP04_Waste/: Makefile  process.py  process_centroids.py
processing/SP06 _Materials/: Makefile  analyse_attributes.py
processing/SP0_Migration/: Makefile  process.ipynb  process.py
processing/SP7/: Makefile  process.py
processing/storylines/: Makefile  README.md  process_sparrow.py  sparrow.ipynb  waste.ipynb
processing/storylines/biodiverstiy/: DataAccess.ipynb  DataAccess.py  Makefile  README.md  biodiversity.ipynb  biodiversity.py  mergeability.ipynb  road_area_surface.ipynb
processing/storylines/merge/: DataAccess.ipynb  DataAccess.py  Makefile  README.md  merge.ipynb  merge.py
processing/storylines/waste/: .gitignore  README.md  waste.ipynb  waste.py
processing/swisstlmregio_2021_2056.shp/: terminal_history_gdl_tippecanoe_process.txt
processing/traffic-analysis/: Makefile  README.md  download_elevation_data.py  enrich_habitat.py  enrich_pt_bike.py  feature_description.md  generate_graph_tiles.py  lausanne_network .ipynb  lausanne_network.py  lausanne_network_old.ipynb  pyproject.toml  traffic_analysis.ipynb  traffic_analysis.py
