[project]
name = "bluecity-backend"
version = "0.1.0"
description = "FastAPI backend for traffic analysis and route optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "osmnx>=1.9.0",
    "networkx>=3.3",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "pmtiles>=3.3.0",
    "shapely>=2.0.0",
    "scipy>=1.11.0",
    "igraph>=1.0.0",
    "pyvrp>=0.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
fix = true
lint.select = ["E", "F", "I"] # errors, flake8, imports
exclude = ["migrations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
