[project]

name = "traffic-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "osmnx>=1.9.0",
    "networkx>=3.2",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "folium>=0.15.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.0.0"
]